--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -93,6 +93,20 @@
     <!-- BlockedContactsActivity -->
     <string name="BlockedContactsActivity_blocked_contacts">Blocked contacts</string>
 
+    <!-- BlockUnblockDialog -->
+    <string name="BlockUnblockDialog_block_and_leave_s">Block and leave %1$s?</string>
+    <string name="BlockUnblockDialog_block_s">Block %1$s?</string>
+    <string name="BlockUnblockDialog_you_will_no_longer_receive_messages_or_updates">You will no longer receive messages or updates from this group, and members won\'t be able to add you to this group again.</string>
+    <string name="BlockUnblockDialog_group_members_wont_be_able_to_add_you">Group members won\'t be able to add you to this group again.</string>
+    <string name="BlockUnblockDialog_group_members_will_be_able_to_add_you">Group members will be able to add you to this group again.</string>
+    <string name="BlockUnblockDialog_you_will_be_able_to_call_and_message_each_other">You will be able to message and call each other.</string>
+    <string name="BlockUnblockDialog_blocked_people_wont_be_able_to_call_you_or_send_you_messages">Blocked people won\'t be able to call you or send you messages.</string>
+    <string name="BlockUnblockDialog_unblock_s">Unblock %1$s?</string>
+    <string name="BlockUnblockDialog_unblock">Unblock</string>
+    <string name="BlockUnblockDialog_block">Block</string>
+    <string name="BlockUnblockDialog_block_and_leave">Block and Leave</string>
+    <string name="BlockUnblockDialog_block_and_delete">Block and Delete</string>
+
     <!-- BucketedThreadMedia -->
     <string name="BucketedThreadMedia_Today">Today</string>
     <string name="BucketedThreadMedia_Yesterday">Yesterday</string>
@@ -243,15 +257,6 @@
     <string name="ConversationActivity_sticker_pack_installed">Sticker pack installed</string>
     <string name="ConversationActivity_new_say_it_with_stickers">New! Say it with stickers</string>
 
-    <string name="ConversationActivity_block_s">Block %1$s?</string>
-    <string name="ConversationActivity_block_and_leave_s">Block and leave %1$s?</string>
-    <string name="ConversationActivity_unblock_s">Unblock %1$s?</string>
-    <string name="ConversationActivity_you_will_be_able_to_message_and_call_each_other">You will be able to message and call each other.</string>
-    <string name="ConversationActivity_group_members_will_be_able_to_add_you_to_this_group_again">Group members will be able to add you to this group again.</string>
-    <string name="ConversationActivity_blocked_people_will_not_be_able_to_call_you_or_send_you_messages">Blocked people will not be able to call you or send you messages.</string>
-    <string name="ConversationActivity_you_will_leave_this_group_and_no_longer_receive_messages_or_updates">You will leave this group and no longer receive messages or updates.</string>
-    <string name="ConversationActivity_block">Block</string>
-    <string name="ConversationActivity_block_and_delete">Block and delete</string>
     <string name="ConversationActivity_cancel">Cancel</string>
     <string name="ConversationActivity_delete_conversation">Delete conversation?</string>
     <string name="ConversationActivity_delete_and_leave_group">Delete and leave group?</string>
@@ -836,16 +841,7 @@
     <string name="ReactionsRecipientAdapter_you">You</string>
 
     <!-- RecipientPreferencesActivity -->
-    <string name="RecipientPreferenceActivity_block_this_contact_question">Block this contact?</string>
-    <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">You will no longer receive messages and calls from this contact.</string>
-    <string name="RecipientPreferenceActivity_block_and_leave_group">Block and leave this group?</string>
-    <string name="RecipientPreferenceActivity_block_group">Block this group?</string>
-    <string name="RecipientPreferenceActivity_block_and_leave_group_description">You will no longer receive messages or updates from this group.</string>
     <string name="RecipientPreferenceActivity_block">Block</string>
-    <string name="RecipientPreferenceActivity_unblock_this_contact_question">Unblock this contact?</string>
-    <string name="RecipientPreferenceActivity_you_will_once_again_be_able_to_receive_messages_and_calls_from_this_contact">You will once again be able to receive messages and calls from this contact.</string>
-    <string name="RecipientPreferenceActivity_unblock_this_group_question">Unblock this group?</string>
-    <string name="RecipientPreferenceActivity_unblock_this_group_description">Existing members will be able to add you to the group again.</string>
     <string name="RecipientPreferenceActivity_error_leaving_group">Error leaving group</string>
     <string name="RecipientPreferenceActivity_unblock">Unblock</string>
     <string name="RecipientPreferenceActivity_enabled">Enabled</string>
